--- a/course.html
+++ b/course.html
@@ -28,7 +28,7 @@
     <!-- <link rel="stylesheet" href="course.css"> -->
 </head>
 
-<body >
+<body style="overflow: hidden;">
     <!-- --------HEADER------- -->
     <section class="header">
         <nav class="all-flex">
