--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <nav class="all-flex">
             <a href="index.html"><img src="img/vssut_LOGO2.png" alt=""></a>
             <div class="nav-link" id="navLinks">
-                <i class="fa fa-times" aria-hidden="true" onclick="hideMenu()"></i>
+                <i class="fa fa-times" id="times" aria-hidden="true" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -36,14 +36,14 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa fa-bars" aria-hidden="true" onclick="showMenu()"></i>
+            <i class="fa fa-bars" id="bars" aria-hidden="true" onclick="showMenu()"></i>
         </nav>
         <div class="main-heading">
             <h1 class="heading-h1">About Us</h1>
         </div>
     </section>
 
-    <div class="about-imgg">
+    <div class="about-imgg" style="overflow-x: hidden;">
         <img src="img/about/background.jpg" alt="">
     </div>
     
@@ -220,17 +220,22 @@
 
 
 
-    <script>
-        var navLinks = document.getElementById("navLinks");
+<script>
+    var navLinks = document.getElementById("navLinks");
+    var time=document.getElementById('times');
+    var bar=document.getElementById('bars');
+    function showMenu() {
+        // navLinks.style.right = "0";
+        bar.classList.toggle('hide-bar');
+        navLinks.classList.add('active-bar');
+    }
 
-        function showMenu() {
-            navLinks.style.right = "0";
-        }
-
-        function hideMenu() {
-            navLinks.style.right = "-200px";
-        }
-    </script>
+    function hideMenu() {
+        // navLinks.style.right = "-100%";
+        bar.classList.remove('hide-bar');
+        navLinks.classList.remove('active-bar');
+    }
+</script>
 
 </body>
 
