--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <nav class="all-flex">
             <a href="index.html"><img src="img/vssut_LOGO2.png" alt=""></a>
             <div class="nav-link" id="navLinks">
-                <i class="fa fa-times" aria-hidden="true" onclick="hideMenu()"></i>
+                <i class="fa fa-times" id="times" aria-hidden="true" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
@@ -38,13 +38,13 @@
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa fa-bars" aria-hidden="true" onclick="showMenu()"></i>
+            <i class="fa fa-bars" id="bars"  aria-hidden="true" onclick="showMenu()"></i>
         </nav>
         <div class="main-heading">
             <h1 class="heading-h1">Conatct Us</h1>
          </div>
     </section>
-    <div class="about-imgg">
+    <div class="about-imgg" style="overflow-x: hidden;">
         <img src="img/contact/background.jpg" alt="">
     </div>
 
@@ -187,13 +187,18 @@
 
     <script>
         var navLinks = document.getElementById("navLinks");
-
+        var time=document.getElementById('times');
+        var bar=document.getElementById('bars');
         function showMenu() {
-            navLinks.style.right = "0";
+            // navLinks.style.right = "0";
+            bar.classList.toggle('hide-bar');
+            navLinks.classList.add('active-bar');
         }
 
         function hideMenu() {
-            navLinks.style.right = "-200px";
+            // navLinks.style.right = "-100%";
+            bar.classList.remove('hide-bar');
+            navLinks.classList.remove('active-bar');
         }
     </script>
 
